--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="darkgrey">#696767</color>
     <color name="yellow01">#FDCB4D</color>
     <color name="Blue">#303F9F</color>
+    <color name="gray">#4D4B4A</color>
 </resources>
