--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity">
+    tools:context=".view.LogInActivity">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/signIn"
@@ -23,7 +23,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/BarberSlashScreen"
+            android:src="@drawable/barber"
             app:flow_verticalAlign="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +65,7 @@
 
             />
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/forgotpassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
@@ -72,6 +73,19 @@
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/txtSkip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/skip"
+            android:textColor="@color/Blue"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/forgotpassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
             android:id="@+id/login_register"
             android:layout_width="wrap_content"
@@ -79,6 +93,7 @@
             android:text="@string/no_account"
             android:textColor="@color/Blue"
             android:textSize="20sp"
+            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
