--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.booksalonappointment.viewmodel.RegistrationViewModel" />
+        <import type="android.view.View" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +16,7 @@
         android:id="@+id/signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/signin"
+        android:text="@string/signup"
         android:textSize="30sp"
         android:background="@color/Blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,38 +28,30 @@
         android:id="@+id/salonImg"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/BarberSlashScreen"
+        android:src="@drawable/barber"
         android:layout_marginTop="30dp"
         app:flow_verticalAlign="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signIn"/>
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edtName"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/entername"
-        android:layout_marginTop="50dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/salonImg"
-        />
+
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edtMobile"
+        android:text="@={viewModel.mobileNumber}"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="@string/phone"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/edtName"
+        app:layout_constraintTop_toBottomOf="@+id/salonImg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edtPassword"
         android:layout_width="350dp"
+        android:text="@={viewModel.password}"
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:textSize="20sp"
@@ -64,6 +64,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="@string/confirmpassword"
+        android:text="@={viewModel.confirmPassword}"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/edtPassword"
@@ -74,13 +75,13 @@
         android:id="@+id/btnRegister"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:text="@string/register"
+        android:onClick="@{(view) -> viewModel.onRegisterClick()}"
+        android:text="@string/signup"
         android:textSize="20sp"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/edtconfirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         />
     <TextView
         android:id="@+id/register_login"
@@ -89,7 +90,11 @@
         android:text="@string/existing_user"
         android:textColor="@color/Blue"
         android:textSize="20sp"
+        android:layout_marginBottom="@dimen/_15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
