--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginTop="188dp"
-        android:src="@drawable/SlashScreenBarber"
+        android:src="@drawable/barber"
         app:flow_verticalAlign="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
