--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<layout>
+        <data>
+                <variable
+                    name="viewModel"
+                    type="com.example.booksalonappointment.viewmodel.login.LoginViewModel" />
+                <import type="android.view.View" />
+        </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,11 +39,12 @@
 
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/edtEmail"
+            android:id="@+id/edtPhone"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:hint="@string/phone"
             android:textSize="30sp"
+            android:text="@={viewModel.mobileNumber}"
             android:layout_marginTop="300dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,9 +55,10 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:hint="@string/password"
+            android:text="@={viewModel.password}"
             android:textSize="30sp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/edtEmail"
+            app:layout_constraintTop_toBottomOf="@id/edtPhone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
@@ -59,6 +69,7 @@
             android:text="@string/login"
             android:textSize="20sp"
             android:layout_marginTop="0dp"
+            android:onClick="@{(view) -> viewModel.onLoginClick()}"
             app:layout_constraintTop_toBottomOf="@id/edtPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,10 +103,10 @@
             android:layout_height="wrap_content"
             android:text="@string/no_account"
             android:textColor="@color/Blue"
-            android:textSize="20sp"
-            android:layout_marginBottom="15dp"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
