--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="yellow01">#FDCB4D</color>
     <color name="Blue">#303F9F</color>
     <color name="gray">#4D4B4A</color>
+    <color name="red">#D32F2F</color>
+    <color name="background_color">#0097A7</color>
 </resources>
