--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -55,6 +55,7 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:hint="@string/password"
+            android:inputType="textPassword"
             android:text="@={viewModel.password}"
             android:textSize="30sp"
             android:layout_marginTop="10dp"
