--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
- xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    tools:context=".view.DashBoardActivity">
 
 <androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:id="@+id/drawerLayout"
     android:fitsSystemWindows="true"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    tools:context=".view.DashBoardActivity">
 
-
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:background="#F8F3F3">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            app:title="@string/BookAppointment"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#286295"
+            android:background="@color/background_color"
+            app:navigationIcon="@drawable/ic_baseline_menu_24"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="?attr/actionBarSize"
-                android:background="#F8F3F3">
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.Toolbar>
 
-    </FrameLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+ <androidx.fragment.app.FragmentContainerView
+     android:layout_width="match_parent"
+     android:layout_height="0dp"
+     android:id="@+id/fragment"
+     android:name="com.example.booksalonappointment.view.HomeFragment"
+     app:layout_constraintTop_toBottomOf="@id/toolbar"
+     app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
@@ -51,64 +49,5 @@
 </androidx.drawerlayout.widget.DrawerLayout>
 
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/saloon"
-        android:id="@+id/saloon"
-        app:layout_constraintTop_toBottomOf="@id/drawerLayout"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnOurServices"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/corner_button"
-        android:fontFamily="cursive"
-        android:text="Our Services"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/saloon"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnBookAppointment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/corner_button"
-        android:fontFamily="cursive"
-        android:text="Book Appointment"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/btnOurServices"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnWorkinghours"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/corner_button"
-        android:fontFamily="cursive"
-        android:text="Working Hours"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/btnBookAppointment"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnAboutUs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/corner_button"
-        android:fontFamily="cursive"
-        android:text="About Us"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/btnWorkinghours"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
