--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -54,6 +54,7 @@
         android:text="@={viewModel.password}"
         android:layout_height="wrap_content"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/edtMobile"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +65,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="@string/confirmpassword"
+        android:inputType="textPassword"
         android:text="@={viewModel.confirmPassword}"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
