--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="gray">#4D4B4A</color>
     <color name="red">#D32F2F</color>
     <color name="background_color">#0097A7</color>
+    <color name="grey">#979696</color>
 </resources>
