--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -14,27 +14,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"
-        android:background="#F8F3F3">
+        android:background="@color/grey">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             app:title="@string/BookAppointment"
+            app:titleTextColor="@color/black"
+            android:scrollbarSize="@dimen/_60dp"
+            app:titleTextAppearance="@dimen/_100dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/background_color"
+            android:background="@color/darkgrey"
             app:navigationIcon="@drawable/ic_baseline_menu_24"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         </androidx.appcompat.widget.Toolbar>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+
  <androidx.fragment.app.FragmentContainerView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:id="@+id/fragment"
      android:name="com.example.booksalonappointment.view.HomeFragment"
      app:layout_constraintTop_toBottomOf="@id/toolbar"
-     app:layout_constraintBottom_toBottomOf="parent"/>
+     app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
