--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -19,8 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/signin"
-            android:textSize="30sp"
-            android:background="@color/Blue"
+            android:textSize="@dimen/_40dp"
+            android:background="@color/darkgrey"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -63,14 +64,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
-        <Button
+
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogin"
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:text="@string/login"
+            android:backgroundTint="@color/darkgrey"
             android:textSize="20sp"
             android:layout_marginTop="0dp"
-            android:onClick="@{(view) -> viewModel.onLoginClick()}"
             app:layout_constraintTop_toBottomOf="@id/edtPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,21 +85,10 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/white"
             android:text="@string/forgotpassword"
+            android:textSize="@dimen/_15dp"
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/txtSkip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/skip"
-            android:textColor="@color/Blue"
-            android:textSize="15sp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/forgotpassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/login_register"
@@ -104,6 +96,7 @@
             android:layout_height="wrap_content"
             android:text="@string/no_account"
             android:textColor="@color/Blue"
+            android:layout_marginBottom="@dimen/_20dp"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
