--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -13,12 +13,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
    >
     <androidx.appcompat.widget.AppCompatEditText
+
+
         android:id="@+id/signIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/signup"
-        android:textSize="30sp"
-        android:background="@color/Blue"
+        android:gravity="center"
+        android:textSize="@dimen/_40dp"
+        android:background="@color/darkgrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,12 +76,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
-    <Button
+   <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnRegister"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:onClick="@{(view) -> viewModel.onRegisterClick()}"
         android:text="@string/signup"
+       android:backgroundTint="@color/darkgrey"
         android:textSize="20sp"
         android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/edtconfirmPassword"
@@ -89,6 +92,7 @@
         android:id="@+id/register_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_20dp"
         android:text="@string/existing_user"
         android:textColor="@color/Blue"
         android:textSize="30sp"
