--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -1,32 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginVertical="@dimen/small_margin"
-    android:layout_marginHorizontal="@dimen/common_margin">
+    android:id="@+id/card_view"
+    android:layout_width="@dimen/_155dp"
+    android:layout_height="@dimen/_155dp"
+    android:layout_margin="@dimen/_10dp"
+    android:padding="@dimen/_10dp"
+    app:cardBackgroundColor="@color/grey"
+    app:cardCornerRadius="@dimen/_10dp"
+    app:cardElevation="@dimen/_10dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/c_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/card_color_selector">
 
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_category_image"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintWidth_percent="0.4"
+        android:layout_width="@dimen/_100dp"
+        android:layout_height="@dimen/_100dp"
+        android:contentDescription="@string/service_img"
+        android:src="@drawable/ic_default"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        app:layout_constraintVertical_bias="0.325"
         />
 
-    <TextView
+        <TextView
         android:id="@+id/tv_category"
-        android:layout_marginStart="@dimen/small_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_category_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_10dp"
+        android:text="@string/haircuts"
+        android:textColor="@color/black"
+        android:textSize="@dimen/date_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        tools:text="Sample Category Name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
